--- a/web/index.html
+++ b/web/index.html
@@ -58,6 +58,9 @@
       });
     });
   </script>
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+</script>
 </body>
 
 </html>
